<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0" >
    
    <TextView android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_date"
        android:textSize="20sp" />
    <EditText android:id="@+id/date_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/date_title"
       	android:textSize="15sp"
       	android:hint=""/>
    
    <TextView android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_entry"
        android:text="@string/create_description"
        android:textSize="20sp" />
    <EditText android:id="@+id/description_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_title"
       	android:textSize="15sp"
       	android:hint=""/>
    
    <TextView android:id="@+id/starting_battery_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_entry"
        android:text="@string/create_starting_battery"
        android:textSize="20sp" />
    <EditText android:id="@+id/starting_battery_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_entry"
        android:layout_toRightOf="@+id/starting_battery_title"
       	android:textSize="15sp"
       	android:hint=""/>
    
    <TextView android:id="@+id/ending_battery_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/starting_battery_entry"
        android:text="@string/create_ending_battery"
        android:textSize="20sp" />
    <EditText android:id="@+id/ending_battery_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/starting_battery_entry"
        android:layout_toRightOf="@+id/ending_battery_title"
       	android:textSize="15sp"
       	android:hint=""/>
    
    <TextView android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ending_battery_entry"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="10dip"
        android:text="@string/create_time"
        android:textSize="20sp" />
    
    <TextView android:id="@+id/time_hour_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/time_title"
        android:text="@string/create_time_hour"
        android:textSize="20sp" />
    <EditText android:id="@+id/time_hour_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_title"
        android:layout_toRightOf="@+id/time_hour_title"
       	android:textSize="15sp"
       	android:hint=""/>
    
    <TextView android:id="@+id/time_minute_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_hour_entry"
        android:text="@string/create_time_minute"
        android:textSize="20sp" />
    <EditText android:id="@+id/time_minute_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_hour_entry"
        android:layout_toRightOf="@+id/time_minute_title"
       	android:textSize="15sp"
       	android:hint=""/>
    
    <TextView android:id="@+id/time_second_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_minute_entry"
        android:text="@string/create_time_second"
        android:textSize="20sp" />
    <EditText android:id="@+id/time_second_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_minute_entry"
        android:layout_toRightOf="@+id/time_second_title"
       	android:textSize="15sp"
       	android:hint=""/>
    
    <Button android:id="@+id/submit"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_second_entry"
        android:layout_marginTop="15dip"
        android:layout_centerHorizontal="true"
        android:text="@string/create_submit"
        android:textSize="20sp"
        android:onClick="submit" />
    
    <TextView android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="15sp" />
    
</RelativeLayout>