<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_log"
        android:contentDescription="@string/battery_image"
        android:src="@drawable/battery_image" />
    
    <Button
        android:id="@+id/button_log"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dip"
        android:text="@string/main_log"
        android:textSize="20sp"
        android:onClick="checkLog" />
    
    <Button
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_log"
        android:layout_centerHorizontal="true"
        android:text="@string/main_statistics"
        android:textSize="20sp"
        android:onClick="checkStatistics" />
        
</RelativeLayout>